# MMNx

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg-configuration.json  vcpkg.json
.ci/: azure.yml  build.ps1
.vcpkg/ports/sciterjs/: FindSCITERJS.cmake.in  portfile.cmake  sciter-x64.lib  sciter-x86.lib  sciter.def  usage  vcpkg-cmake-wrapper.cmake  vcpkg.json
.vcpkg/versions/: baseline.json
.vcpkg/versions/s-/: sciterjs.json
misc/: version.rc.in
src/: main.cpp
ui/: main.html
ui/css/: main.css
ui/js/: main.js
